test/FAIL/breakcmd/to_many_arguments/03_test_break.emu
#-#-------
#TEST_RETURN_CODE=FAIL           
#TEST_COMMENT="to many arguments"
#-------

break del all +
